--- a/public/index.html
+++ b/public/index.html
@@ -29,14 +29,14 @@
                     <br>
                     <input type="text" class="box" id="password" name="password" placeholder="Password" required />
                     <br>
-                    <input type="submit" value="Submit" id="submit" />
+                    <input type="submit" value="Submit" id="submit" onclick="myFunction()"/>
                 </form>
             </div>
             <div class="col-md-3">
             </div>
         </div>
     </div>
+    <script src="app.js"></script>
 
 </body>
-
 </html>
