--- a/public/signup_success.html
+++ b/public/signup_success.html
@@ -5,7 +5,7 @@
     <title> Signup Form</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -24,9 +24,14 @@
             </div>
 
 
+
+
             <div class="col-md-3">
             </div>
 
+        </div>
+        <div class="django">
+            <h1 class="textdjango">Made with by Django</h1>
         </div>
     </div>
 </body>
